force-app/main/default/objects/Home_Approval__c/fields/Restricted_Clients_Identified__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Clients_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted Clients Identified</label>
    <type>Checkbox</type>
</CustomField>