force-app/main/default/objects/Home_Approval__c/fields/Screen_incidents_Justify_in_Approval__c.field-meta.xml
<CustomField>
    <fullName>Screen_incidents_Justify_in_Approval__c</fullName>
    <formula>NOT(ISBLANK(Justification_Notes__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Screening for incidents of child abuse or neglect (CPS of clearance) for each household member (System)</inlineHelpText>
    <label>Screen incidents(Justify in Approval)</label>
    <type>Checkbox</type>
</CustomField>