force-app/main/default/objects/Home_Approval__c/fields/Screening_incidents_of_child_abuse__c.field-meta.xml
<CustomField>
    <fullName>Screening_incidents_of_child_abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System</inlineHelpText>
    <label>Screening incidents of child abuse</label>
    <type>Checkbox</type>
</CustomField>