force-app/main/default/objects/Home_Approval__c/fields/Set_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Set_Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This home should be Approved</fullName>
            </value>
            <value>
                <fullName>This home should be Approved under CAP</fullName>
            </value>
            <value>
                <fullName>This home should be Denied</fullName>
            </value>
            <value>
                <fullName>No recommendation - Application Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>