force-app/main/default/objects/Home_Approval__c/fields/Signed_and_dated_application__c.field-meta.xml
<CustomField>
    <fullName>Signed_and_dated_application__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Signed and dated application (System)</inlineHelpText>
    <label>Signed(Assessment in activity type)</label>
    <type>Checkbox</type>
</CustomField>