force-app/main/default/objects/Home_Approval__c/fields/State_criminal_record_household_members__c.field-meta.xml
<CustomField>
    <fullName>State_criminal_record_household_members__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>state criminal record checks for all household members 18 years of age and older have been completed (System).</inlineHelpText>
    <label>State(Ethnicity in household)</label>
    <type>Checkbox</type>
</CustomField>