force-app/main/default/objects/Home_Approval__c/fields/Summary_of_child_s_past_experience__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_child_s_past_experience__c</fullName>
    <inlineHelpText>4a. Kinship Care Issues (for restrictive or relative placements): Summary of child&apos;s past experience and current issue.</inlineHelpText>
    <label>4a.Summary of child&apos;s past experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>