force-app/main/default/objects/Home_Approval__c/fields/Supervisory_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Supervisory_Approval_Date__c</fullName>
    <label>Supervisory Approval Date</label>
    <type>Date</type>
</CustomField>