force-app/main/default/objects/Home_Approval__c/fields/Supporting_Family_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Family_Comments__c</fullName>
    <inlineHelpText>Supporting Relationship between Children and their Famlies</inlineHelpText>
    <label>Supporting Family Comments</label>
    <type>TextArea</type>
</CustomField>