force-app/main/default/objects/Home_Approval__c/fields/Supporting_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Strengths__c</fullName>
    <inlineHelpText>Supporting Relationship between Children and their Famlies</inlineHelpText>
    <label>Supporting Strengths</label>
    <type>TextArea</type>
</CustomField>