force-app/main/default/objects/Home_Approval__c/fields/Supporting_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Weaknesses__c</fullName>
    <inlineHelpText>Supporting Relationship between Children and their Famlies</inlineHelpText>
    <label>Supporting Weaknesses</label>
    <type>TextArea</type>
</CustomField>