force-app/main/default/objects/Home_Approval__c/fields/Tb_tests_for_household_members__c.field-meta.xml
<CustomField>
    <fullName>Tb_tests_for_household_members__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Tb tests for household members</label>
    <type>Checkbox</type>
</CustomField>