force-app/main/default/objects/Home_Approval__c/fields/Twenty_Approval_filled__c.field-meta.xml
<CustomField>
    <fullName>Twenty_Approval_filled__c</fullName>
    <formula>Combining_Various_Types_Of_Care__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Twenty Seven hours of pre-service training completed.</inlineHelpText>
    <label>Twenty(Approval filled in combing)</label>
    <type>Checkbox</type>
</CustomField>