force-app/main/default/objects/Home_Approval__c/fields/Twenty_seven_hours_of_pre_service__c.field-meta.xml
<CustomField>
    <fullName>Twenty_seven_hours_of_pre_service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System</inlineHelpText>
    <label>Twenty seven hours of pre-service</label>
    <type>Checkbox</type>
</CustomField>