force-app/main/default/objects/Home_Approval__c/fields/Verification_of_marriage_divorce__c.field-meta.xml
<CustomField>
    <fullName>Verification_of_marriage_divorce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User</inlineHelpText>
    <label>Verification of marriage&amp;divorce</label>
    <type>Checkbox</type>
</CustomField>