force-app/main/default/objects/Home_Approval__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Reason_for_Home_Approval__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified the approval, If filled the home approval type.</inlineHelpText>
    <label>Verified (Reason For Home Approval)</label>
    <type>Checkbox</type>
</CustomField>