force-app/main/default/objects/Home_Approval__c/fields/Verified_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Verified_Checklist__c</fullName>
    <formula>AND( NOT(ISBLANK(Fire_Safety_Inspection_Completion_Date__c)),  NOT(ISBLANK(Health_Sanitary_Survey_Completion_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the Fire Safety Inspection Completion Date and Health &amp; Sanitary Survey Completion Date</inlineHelpText>
    <label>Verified (Checklist)</label>
    <type>Checkbox</type>
</CustomField>