force-app/main/default/objects/Home_Approval__c/fields/Verified_Children__c.field-meta.xml
<CustomField>
    <fullName>Verified_Children__c</fullName>
    <formula>NOT(ISBLANK( Children_Recommendations__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified Enabled, If filled Recommendations values</inlineHelpText>
    <label>Verified (Filled Recommendations)</label>
    <type>Checkbox</type>
</CustomField>