force-app/main/default/objects/Home_Approval__c/fields/What_was_the_family_original_motivation__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_family_original_motivation__c</fullName>
    <inlineHelpText>What was the family&apos;s original motivation to provider foster care or adoption? Expectations?</inlineHelpText>
    <label>What was the family original motivation?</label>
    <type>TextArea</type>
</CustomField>