force-app/main/default/objects/Home_Approval__c/fields/Working_Family_Comments__c.field-meta.xml
<CustomField>
    <fullName>Working_Family_Comments__c</fullName>
    <inlineHelpText>Working as a Member of a Professional Team</inlineHelpText>
    <label>Working Family Comments</label>
    <type>TextArea</type>
</CustomField>