force-app/main/default/objects/Home_Approval__c/fields/Working_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Working_Strengths__c</fullName>
    <inlineHelpText>Working as a Member of a Professional Team</inlineHelpText>
    <label>Working Strengths</label>
    <type>TextArea</type>
</CustomField>