force-app/main/default/objects/Home_Approval__c/fields/Working_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Working_Weaknesses__c</fullName>
    <inlineHelpText>Working as a Member of a Professional Team</inlineHelpText>
    <label>Working Weaknesses</label>
    <type>TextArea</type>
</CustomField>